# impakt-robot-soccer-simple-g1-controller

./: LICENSE  README.md  body_controller.py  config.py  config.toml  head_servos_controller.py  main.py  pyproject.toml  ros2_bridge.py  setup.py  shared_state.py  timing.py  vision_bridge.py  yolo_detector.py
robot_soccer/: app.py  config.py  state.py  timing.py  utils.py
robot_soccer/audio/: audio_controller.py
robot_soccer/behavior/: behavior_controller.py  health_check.py  states.py
robot_soccer/control/: body_controller.py  head_controller.py
robot_soccer/ros/: ros2_bridge.py
robot_soccer/vision/: vision_worker.py  yolo_detector.py
tests/: test_config.py  test_state.py  test_timing.py
tests/control/: test_body_controller.py  test_head_controller.py  test_head_controller_behavior.py
